--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+}
 
-  color-scheme: light dark;
-  color: #ecedef;
-  background-color: #111;
+:root, html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#root {
+  padding: 2rem;
+  background-color: #f3f4f6;
+}
+
+b,
+strong {
+  font-weight: 900;
 }
 
 a {
@@ -22,69 +30,12 @@ a {
   color: #0099ff;
   text-decoration: underline;
 }
+
 a:hover {
   color: #1574ef;
 }
 
-body {
-  margin: 0;
-  display: flex;
+#root {
+  display: grid;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #111 300px),
-    fixed 0 0 / 20px 20px radial-gradient(#313131 1px, transparent 0),
-    fixed 10px 10px / 20px 20px radial-gradient(#313131 1px, transparent 0);
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid #0c52a8;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  box-shadow: 0 5px 0 #0c52a8;
-  background-color: #1574ef;
-  cursor: pointer;
-  transition: border-color 0.1s;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-button:active {
-  box-shadow: none;
-  transform: translateY(5px);
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #000;
-    background-color: #fff;
-  }
-  body {
-    background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 300px
-      ),
-      fixed 0 0 / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0),
-      fixed 10px 10px / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0);
-  }
-  a:hover {
-    color: #1574ef;
-  }
-  button {
-    color: #fff;
-  }
-  code {
-    background: #f2f2f2;
-    border-color: #e6e6e6;
-  }
 }
