--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
-  font-family: 'Noto Sans JP', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Oxygen, Cantarell, sans-serif;
+  font-family: "Noto Sans JP", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Oxygen, Cantarell, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 }
 
-:root, html, body, #root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+:root,
+html,
+body,
+#root {
+  @apply w-full h-full m-0 p-0 overflow-hidden;
 }
 
 #root {
-  padding: 2rem;
-  background-color: #f3f4f6;
-}
-
-b,
-strong {
-  font-weight: 900;
+  @apply bg-gray-900 p-8;
 }
 
 a {
